# tflite-pico

./: CMakeLists.txt
examples/impsy_model/: CMakeLists.txt  impsy_test.cpp  musicMDRNN-dim4-layers1-units4-mixtures5-scale10.cc  musicMDRNN-dim4-layers2-units32-mixtures5-scale10.cc  musicMDRNN-dim4-layers2-units32-mixtures5-scale10.h  musicMDRNN-dim4-layers2-units64-mixtures5-scale10_data.cc  xxs_impsy_model.cc  xxs_impsy_model.h
examples/impsy_model/rp2/: output_handler.cpp
